--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import "../src/styles/tokens.css";
+@import "../src/styles/animations.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
